# 04241

./: .gitignore  LICENSE
HuadongCode/: API文档.docx  API文档.md  README.md  main.py  pyproject.toml  模型率定参数说明.md
HuadongCode/agents/: __init__.py  capture_huadong_workflow_io.py  huadong_workflow.py  run_huadong_workflow.py
HuadongCode/app/: __init__.py  mcp_server.py  rest_api.py  rest_jobs.py  rest_server.py  server.py
HuadongCode/app/config/: settings.py  warning_rules.yaml
HuadongCode/app/core/: _io.py  calibrated_parameters.py  data_analysis.py  data_loading.py  ensemble.py  error_analysis.py  forecast.py  gr4j.py  gr4j_model.py  lifecycle.py  model_assets.py  risk.py  trained_models.py  warning.py  xaj.py  xaj_model.py
HuadongCode/app/domain/: __init__.py  contracts.py  models.py
HuadongCode/app/io/: __init__.py  artifacts.py  manifest.py  paths.py
HuadongCode/app/tools/: __init__.py  assets.py  common.py  correction.py  data_analysis.py  ensemble.py  forecast.py  helpers.py  lifecycle.py  risk.py  warning.py
HuadongCode/data/calibrated_parameters/: gr4j_best_parameters.csv  xaj_best_parameters.csv
HuadongCode/experiments/: 6.3_execution_report.md  __init__.py  scenario_631_quick_forecast.py  scenario_632_standard_forecast.py  scenario_633_complex_flood.py  scenario_634_rolling_update.py
HuadongCode/experiments/benchmark/: __init__.py  common.py  scenario_631_quick_forecast.py  scenario_632_standard_forecast.py  scenario_633_complex_flood.py  (+3 more)
HuadongCode/files/: AI需求.csv  AI需求合同对照评估.csv  AI需求合同工作安排对照评估.csv  合同核心.md  工作安排.csv  需求对照.xlsx
HuadongCode/huadong_hydro_forecast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
HuadongCode/reference/: 业务场景设计.md  问数功能清单.md  项目功能分析.md  项目确认关口.md
HuadongCode/results/: huadong_agno_workflow_io_contract.json  huadong_workflow_pydantic_io_capture.json
HuadongCode/tests/: conftest.py  test_architecture_boundaries.py  test_huadong_agno_workflow_contract.py  test_mcp_io_contracts.py  test_rest_api.py
UnifiedGateway/: README.md  pyproject.toml
UnifiedGateway/gateway/: __init__.py  app.py  server.py
UnifiedGateway/tests/: test_gateway_api.py
UnifiedGateway/unified_rest_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+180 files in other folders)
