[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "huadong-hydro-forecast"
version = "0.1.0"
description = "Huadong Hydro FastMCP runtime with path-based forecasting and lifecycle tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "torch>=2.11.0",
    "pyrrmod>=0.2.3",
    "spotpy>=1.6.7",
    "fastmcp>=3.2.4",
    "agno>=2.6.0",
    "fastapi>=0.136,<1",
]

[project.scripts]
huadong-mcp = "app.server:main"
huadong-rest = "app.rest_server:main"
huadong-agno-workflow = "agents.run_huadong_workflow:main"
huadong-agno-capture = "agents.capture_huadong_workflow_io:main"

[project.optional-dependencies]
dl = ["torch>=2.4.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "ruff>=0.7.0"]

[tool.setuptools.packages.find]
include = ["app*", "agents*", "experiments*"]
namespaces = true
