[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-rest-gateway"
version = "0.1.0"
description = "Single FastAPI gateway that mounts the Huadong and Tanken REST services under path prefixes"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "torch>=2.11.0",
    "pyrrmod>=0.2.3",
    "spotpy>=1.6.7",
    "fastmcp>=3.2.4",
    "agno>=2.6.0",
    "fastapi>=0.136,<1",
    "uvicorn>=0.44.0",
    "pyresops==0.1.0",
]

[project.scripts]
unified-rest = "gateway.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.uv.sources]
pyresops = { path = "../TanKengCode/libs/pyresops-0.1.0-py3-none-any.whl" }

[tool.setuptools.packages.find]
include = ["gateway*"]
